<resources>
    <string name="app_name">KILL IS KILL</string>
    <string name="NotificationTitle">Heads-Up title</string>
    <string name="NotificationDesc">Heads-Up description</string>
    <string name="welcome_message">You are not speed</string>
    <string name="permission_granted">Access to location granted.</string>
    <string name="permission_denied">You have to allow to access location.</string>
    <string name="turn_on_location">You have to turn on location.</string>
    <string name="turned_location_on">Congrats. Location turned on.</string>
    <string name="status_changed">Speedometer App is still working.</string>

    <string name="CHANNEL_ID_SPEED">Too Fast</string>
    <string name="CHANNEL_NAME_SPEED">You drive too fast alert</string>
    <string name="CHANNEL_DESC_SPEED">When You drive too fast  You will see this alert.</string>

    <string name="speed_over_500_title">You were over 500km/h</string>
    <string name="speed_over_100_title">You were over 100km/h</string>
    <string name="speed_over_90_title">You were over 90km/h</string>
    <string name="speed_over_70_title">You were over 70km/h</string>
    <string name="speed_over_50_title">You were over 50km/h</string>

    <string name="speed_over_500_text">The penalty is 25 years in prison or a 100PLN fine</string>
    <string name="speed_over_100_text">The fine is 1500 PLN and loss of driving license</string>
    <string name="speed_over_90_text">The fine is 1000PLN</string>
    <string name="speed_over_70_text">The fine is 300PLN</string>
    <string name="speed_over_50_text">The fine is 50PLN</string>

    <string name="top_speed">TopSpeed: 0km/h</string>

    <string name="measure_waiting">Waiting</string>
    <string name="measure_go">GO!</string>
    <string name="measure_stop">You have to stop</string>

    <string name="button_start" translatable="false">START</string>
    <string name="button_reset" translatable="false">RESET</string>

</resources>